fixed overlapping text

--- a/src/components/Work/Job/index.scss
+++ b/src/components/Work/Job/index.scss
@@ -24,6 +24,6 @@
     font-family: sans-serif;
     font-weight: 300;
     min-width: fit-content;
-    line-height: 5px;
+    margin-bottom: 0;
   }
 }
